Refactors starting to work

--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -252,7 +252,7 @@
    "source": [
     "# loss function\n",
     "def loss(y_predicted, y_actual, size):\n",
-    "    return 0.5 * np.sum((y_actual - y_predicted) ** 2) / size"
+    "    return np.sum((y_actual - y_predicted) ** 2) / size"
    ]
   },
   {
@@ -305,14 +305,14 @@
     "        # z = np.dot(x, w)\n",
     "        z = x @ w\n",
     "        h = np.tanh(z)\n",
-    "        y_pred = predict(h)\n",
-    "        error = 1 - accuracy(y_pred, y)\n",
-    "        # error = loss(h, y, no_of_data)\n",
+    "        # y_pred = predict(h)\n",
+    "        # error = 1 - accuracy(y_pred, y)\n",
+    "        error = loss(h, y, no_of_data)\n",
     "        if error < early_terminate_threshold:\n",
     "            break\n",
     "        # gradient = np.dot(x.T, (y - h) * (1 - h ** 2))\n",
     "        gradient = x.T @ ((y - h) * (1 - h ** 2))\n",
-    "        w += learning_rate * gradient\n",
+    "        w += learning_rate * gradient / no_of_data\n",
     "\n",
     "    return w"
    ]
@@ -378,7 +378,7 @@
    "execution_count": 14,
    "outputs": [],
    "source": [
-    "def logistic_regression_test(training_x, training_y, test_x, test_y, threshold, learning_rate=0.0001, no_of_iterations = 10000):\n",
+    "def logistic_regression_test(training_x, training_y, test_x, test_y, threshold, learning_rate=0.01, no_of_iterations = 5000):\n",
     "    w_logi = train(training_x, training_y, early_terminate_threshold=threshold, learning_rate=learning_rate, no_of_iterations=no_of_iterations)\n",
     "    h_logi = np.tanh(np.dot(test_x, w_logi))\n",
     "    h_logi = predict(h_logi)\n",
@@ -487,7 +487,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Contract_Two year', 'tenure', 'MonthlyCharges', 'InternetService_Fiber optic', 'DeviceProtection_No internet service', 'PaymentMethod_Electronic check']\n"
+      "['Contract_Two year', 'tenure', 'MonthlyCharges', 'InternetService_Fiber optic', 'DeviceProtection_No internet service', 'PaymentMethod_Electronic check', 'StreamingTV_No internet service', 'TotalCharges', 'StreamingMovies_No internet service', 'OnlineBackup_No internet service']\n"
      ]
     }
    ],
@@ -496,7 +496,7 @@
     "train_dataset, test_dataset = train_test_split(data, test_size=0.2, random_state=10)\n",
     "\n",
     "columns = info_gain(train_dataset)\n",
-    "feature_cutoff = 6\n",
+    "feature_cutoff = 10\n",
     "columns_to_use = columns[0:feature_cutoff]\n",
     "print(columns_to_use)\n",
     "columns_to_use.append(final_column)\n",
@@ -531,7 +531,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[1.        , 0.        , 0.79166667, ..., 0.        , 0.        ,\n        1.        ],\n       [1.        , 0.        , 0.20833333, ..., 0.        , 0.        ,\n        1.        ],\n       [1.        , 0.        , 0.02777778, ..., 1.        , 0.        ,\n        0.        ],\n       ...,\n       [1.        , 0.        , 0.38888889, ..., 0.        , 1.        ,\n        0.        ],\n       [1.        , 0.        , 0.95833333, ..., 1.        , 0.        ,\n        0.        ],\n       [1.        , 0.        , 0.875     , ..., 0.        , 0.        ,\n        0.        ]])"
+      "text/plain": "array([[1.        , 0.        , 0.79166667, ..., 0.3666282 , 0.        ,\n        0.        ],\n       [1.        , 0.        , 0.20833333, ..., 0.07989268, 0.        ,\n        0.        ],\n       [1.        , 0.        , 0.02777778, ..., 0.01587237, 0.        ,\n        0.        ],\n       ...,\n       [1.        , 0.        , 0.38888889, ..., 0.06280291, 1.        ,\n        1.        ],\n       [1.        , 0.        , 0.95833333, ..., 0.73427187, 0.        ,\n        0.        ],\n       [1.        , 0.        , 0.875     , ..., 0.47225363, 0.        ,\n        0.        ]])"
      },
      "execution_count": 20,
      "metadata": {},
@@ -577,7 +577,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[1.        , 0.        , 0.43055556, ..., 0.        , 0.        ,\n        0.        ],\n       [1.        , 0.        , 0.02777778, ..., 1.        , 0.        ,\n        1.        ],\n       [1.        , 0.        , 0.83333333, ..., 1.        , 0.        ,\n        1.        ],\n       ...,\n       [1.        , 0.        , 0.61111111, ..., 1.        , 0.        ,\n        0.        ],\n       [1.        , 1.        , 0.98611111, ..., 1.        , 0.        ,\n        0.        ],\n       [1.        , 0.        , 0.02777778, ..., 1.        , 0.        ,\n        1.        ]])"
+      "text/plain": "array([[1.        , 0.        , 0.43055556, ..., 0.28446804, 0.        ,\n        0.        ],\n       [1.        , 0.        , 0.02777778, ..., 0.01623009, 0.        ,\n        0.        ],\n       [1.        , 0.        , 0.83333333, ..., 0.67484422, 0.        ,\n        0.        ],\n       ...,\n       [1.        , 0.        , 0.61111111, ..., 0.47358643, 0.        ,\n        0.        ],\n       [1.        , 1.        , 0.98611111, ..., 0.92999077, 0.        ,\n        0.        ],\n       [1.        , 0.        , 0.02777778, ..., 0.01851489, 0.        ,\n        0.        ]])"
      },
      "execution_count": 22,
      "metadata": {},
@@ -625,7 +625,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression accuracy 0.596167494677076.\n"
+      "Logistic regression accuracy 0.78708303761533.\n"
      ]
     }
    ],
@@ -642,21 +642,10 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaboost accuracy for k = 5 is 0.7154009936124911.\n",
-      "Adaboost accuracy for k = 10 is 0.7310149041873669.\n",
-      "Adaboost accuracy for k = 15 is 0.6834634492547906.\n",
-      "Adaboost accuracy for k = 20 is 0.716820440028389.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(1, 5):\n",
-    "    adaboost_test(x_train, y_train, x_test, y_test, i*5)"
+    "# for i in range(1, 5):\n",
+    "#     adaboost_test(x_train, y_train, x_test, y_test, i*5)"
    ],
    "metadata": {
     "collapsed": false,
@@ -766,7 +755,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C5_Married-civ-spouse', 'C10', 'C0', 'C4', 'C5_Never-married', 'C12', 'C7_Own-child', 'C11', 'C2', 'C9', 'C7_Not-in-family', 'C6_Exec-managerial', 'C6_Other-service', 'C3_Bachelors', 'C3_Masters', 'C3_Prof-school', 'C7_Other-relative', 'C3_HS-grad', 'C7_Wife', 'C1_Private', 'C1_Self-emp-inc', 'C7_Unmarried', 'C3_11th', 'C8_White', 'C3_Doctorate', 'C5_Married-spouse-absent', 'C13_Peru', 'C3_Some-college', 'C13_Vietnam', 'C13_England', 'C3_1st-4th', 'C6_Handlers-cleaners', 'C3_Preschool', 'C6_Machine-op-inspct', 'C6_Farming-fishing', 'C13_United-States', 'C13_Hungary', 'C6_Protective-serv', 'C8_Black', 'C5_Widowed', 'C6_Prof-specialty', 'C13_Ireland', 'C13_Japan']\n"
+      "['C5_Married-civ-spouse', 'C10', 'C0', 'C5_Never-married', 'C4', 'C12', 'C7_Own-child', 'C11', 'C2', 'C9', 'C6_Exec-managerial', 'C7_Not-in-family', 'C6_Other-service', 'C3_Bachelors', 'C7_Unmarried', 'C1_Private', 'C3_Masters', 'C3_HS-grad', 'C6_Prof-specialty', 'C3_Prof-school', 'C3_Some-college', 'C7_Other-relative', 'C1_Self-emp-inc', 'C3_Doctorate', 'C13_Philippines', 'C7_Wife', 'C6_Machine-op-inspct', 'C8_White', 'C8_Black', 'C5_Separated', 'C1_Without-pay', 'C13_United-States', 'C1_Never-worked', 'C3_11th', 'C13_Haiti', 'C13_India', 'C6_Priv-house-serv', 'C3_12th', 'C5_Widowed', 'C13_Dominican-Republic', 'C6_Sales', 'C3_5th-6th', 'C13_Laos', 'C13_Iran', 'C6_Handlers-cleaners', 'C1_Self-emp-not-inc', 'C13_Jamaica', 'C13_Mexico', 'C3_7th-8th', 'C6_Farming-fishing']\n"
      ]
     }
    ],
@@ -774,7 +763,7 @@
     "final_column = training_set.columns[-1]\n",
     "#\n",
     "columns = info_gain(training_set)\n",
-    "feature_cutoff = 43\n",
+    "feature_cutoff = 50\n",
     "columns_to_use = columns[0:feature_cutoff]\n",
     "# columns_to_use = columns[-feature_cutoff:]\n",
     "print(columns_to_use)\n",
@@ -812,7 +801,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression accuracy 0.7330630796634113.\n"
+      "Logistic regression accuracy 0.8261777532092623.\n"
      ]
     }
    ],
@@ -829,21 +818,10 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaboost accuracy for k = 5 is 0.997481727166636.\n",
-      "Adaboost accuracy for k = 10 is 0.9475462195196855.\n",
-      "Adaboost accuracy for k = 15 is 0.9971131994349242.\n",
-      "Adaboost accuracy for k = 20 is 0.9989558380934832.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(1, 5):\n",
-    "    adaboost_test(x_train, y_train, x_test, y_test, i*5)"
+    "# for i in range(1, 5):\n",
+    "#     adaboost_test(x_train, y_train, x_test, y_test, i*5)"
    ],
    "metadata": {
     "collapsed": false,
@@ -923,7 +901,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['V14', 'V17', 'V10', 'V12', 'V11']\n"
+      "['V14', 'V17', 'V10', 'V12', 'V11', 'V16', 'V4', 'V3', 'V7', 'V9']\n"
      ]
     }
    ],
@@ -932,7 +910,7 @@
     "train_dataset, test_dataset = train_test_split(data, test_size=0.2, random_state=10)\n",
     "#\n",
     "columns = info_gain(train_dataset)\n",
-    "feature_cutoff = 5\n",
+    "feature_cutoff = 10\n",
     "columns_to_use = columns[0:feature_cutoff]\n",
     "print(columns_to_use)\n",
     "columns_to_use.append(final_column)\n",
@@ -967,7 +945,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[1.        , 0.69397347, 0.83358941, 0.64156954, 0.73094339,\n        0.46738   ],\n       [1.        , 0.79668788, 0.72083479, 0.65133795, 0.80830519,\n        0.25974422],\n       [1.        , 0.80817095, 0.77358506, 0.67080085, 0.66001855,\n        0.29694659],\n       ...,\n       [1.        , 0.8249417 , 0.74619132, 0.65951499, 0.74916007,\n        0.26572135],\n       [1.        , 0.72518406, 0.74622283, 0.65788681, 0.84921538,\n        0.14042614],\n       [1.        , 0.74584076, 0.74165829, 0.67921095, 0.81246251,\n        0.16637542]])"
+      "text/plain": "array([[1.        , 0.69397347, 0.83358941, ..., 0.82486073, 0.64660189,\n        0.60065761],\n       [1.        , 0.79668788, 0.72083479, ..., 0.9143313 , 0.64249178,\n        0.56276164],\n       [1.        , 0.80817095, 0.77358506, ..., 0.94400195, 0.6351803 ,\n        0.57297016],\n       ...,\n       [1.        , 0.8249417 , 0.74619132, ..., 0.85649775, 0.6437259 ,\n        0.63915351],\n       [1.        , 0.72518406, 0.74622283, ..., 0.93583912, 0.63443473,\n        0.6064811 ],\n       [1.        , 0.74584076, 0.74165829, ..., 0.92638789, 0.62924837,\n        0.59241463]])"
      },
      "execution_count": 37,
      "metadata": {},
@@ -990,7 +968,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[1.        , 0.82573218, 0.7636875 , 0.66984686, 0.73044708,\n        0.38589683],\n       [1.        , 0.77810473, 0.70145958, 0.63876927, 0.83650306,\n        0.25254049],\n       [1.        , 0.73430581, 0.72828471, 0.6665894 , 0.78886092,\n        0.24828337],\n       ...,\n       [1.        , 0.75497471, 0.72821951, 0.69183815, 0.80574423,\n        0.27409806],\n       [1.        , 0.78694218, 0.71128519, 0.71054963, 0.81341094,\n        0.21819304],\n       [1.        , 0.74571604, 0.73552805, 0.68130558, 0.88140389,\n        0.23523141]])"
+      "text/plain": "array([[1.        , 0.82573218, 0.7636875 , ..., 0.93493553, 0.6495846 ,\n        0.60985844],\n       [1.        , 0.77810473, 0.70145958, ..., 0.89050367, 0.65974992,\n        0.55123212],\n       [1.        , 0.73430581, 0.72828471, ..., 0.93879084, 0.655352  ,\n        0.57274728],\n       ...,\n       [1.        , 0.75497471, 0.72821951, ..., 0.91632736, 0.63872108,\n        0.44334985],\n       [1.        , 0.78694218, 0.71128519, ..., 0.81074459, 0.63986478,\n        0.50948645],\n       [1.        , 0.74571604, 0.73552805, ..., 0.84902702, 0.63087008,\n        0.57626209]])"
      },
      "execution_count": 38,
      "metadata": {},
@@ -1061,12 +1039,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression accuracy 0.9748719199804831.\n"
+      "Logistic regression accuracy 0.9848743595999024.\n"
      ]
     }
    ],
    "source": [
-    "logistic_regression_test(x_train, y_train, x_test, y_test, 0.5, learning_rate=0.0001, no_of_iterations=40000)"
+    "logistic_regression_test(x_train, y_train, x_test, y_test, 0.5)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1078,21 +1056,10 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaboost accuracy for k = 5 is 0.9748719199804831.\n",
-      "Adaboost accuracy for k = 10 is 0.9748719199804831.\n",
-      "Adaboost accuracy for k = 15 is 0.9748719199804831.\n",
-      "Adaboost accuracy for k = 20 is 0.9748719199804831.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(1, 5):\n",
-    "    adaboost_test(x_train, y_train, x_test, y_test, i*5)"
+    "# for i in range(1, 5):\n",
+    "#     adaboost_test(x_train, y_train, x_test, y_test, i*5)"
    ],
    "metadata": {
     "collapsed": false,
