Trying to debug viterbi algo

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -12,13 +12,12 @@
     "import numpy as np\n",
     "from itertools import islice\n",
     "from scipy.linalg import eig\n",
-    "from scipy.stats import norm\n",
-    "import pandas as pd"
+    "from scipy.stats import norm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -38,23 +37,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int):\n",
     "    observation_count = observations.shape[0]\n",
     "    state_probability_matrix = np.zeros((state_count, observation_count))\n",
-    "    cond_prob = norm.pdf(observations[0], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
-    "    state_probability_matrix[:,0] = np.log2(state_transition_matrix[:,0] * cond_prob)\n",
-    "    path = np.zeros((1,observation_count))\n",
+    "    path = np.ndarray((state_count, observation_count-1), dtype=int)\n",
+    "    cond_prob = np.ndarray((state_count, observation_count))\n",
+    "    # cond_prob = norm.pdf(observations[0], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
+    "    cond_prob[:,0] = norm.pdf(observations[0], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
+    "    state_probability_matrix[:,0] = np.log2(initial_state_probability) + np.log2(cond_prob[:,0])\n",
     "    for i in range(1, observation_count):\n",
-    "        cond_prob = norm.pdf(observations[i], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
+    "        # cond_prob = norm.pdf(observations[i], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
+    "        cond_prob[:,i] = norm.pdf(observations[i], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
     "        for j in range(state_count):\n",
-    "            prob = state_probability_matrix[:,i-1] + np.log2(transition_matrix[:,j]) + np.log2(cond_prob[j])\n",
-    "            path[0,i] = np.argmax(prob)\n",
+    "            # prob = state_probability_matrix[:,i-1] + np.log2(transition_matrix[:,j]) + np.log2(cond_prob[j])\n",
+    "            prob = state_probability_matrix[:,i-1] + np.log2(state_transition_matrix[:,j]) + np.log2(cond_prob[j,i])\n",
+    "            path[j,i-1] = np.argmax(prob)\n",
     "            state_probability_matrix[j,i] = max(prob)\n",
     "\n",
-    "    return path, state_probability_matrix\n",
+    "    return path, state_probability_matrix, cond_prob\n",
     "    # for i in range(1, observation_count):\n",
     "    # cond_prob = norm.pdf(observations[1], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
     "    # state_probability_matrix[0,1] = max(state_probability_matrix[:,0] + np.log2(transition_matrix[:,0]) + np.log2(cond_prob[0]))\n",
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
@@ -104,13 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000,)"
      },
-     "execution_count": 401,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,13 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[200, 100],\n       [ 10,  10]])"
      },
-     "execution_count": 402,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,13 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
       "text/plain": "array([0.25, 0.75])"
      },
-     "execution_count": 403,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,10 +189,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 33,
    "outputs": [],
    "source": [
-    "a, b = estimate_sequence(transition_matrix, gaussian_parameters, initial_distribution.T, observed_states, no_of_states)"
+    "a, b, c = estimate_sequence(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states)"
    ],
    "metadata": {
     "collapsed": false,
@@ -200,13 +203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 34,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n        0., 0., 0., 0., 0., 0., 0., 0.]])"
+      "text/plain": "array([[0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0]])"
      },
-     "execution_count": 405,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,19 +227,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 35,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[   -9.1417294 ,   -18.37205626,   -27.5603542 , ...,\n        -8883.53784543, -8892.80059646, -8902.02466763],\n       [  -72.42089887,   -71.76317252,   -84.75605644, ...,\n        -9020.41398894, -8943.40878121, -8955.96759007]])"
+      "text/plain": "array([[  -10.62715623,   -19.85748309,   -29.04578103, ...,\n        -8885.02327226, -8894.28602329, -8903.51009446],\n       [  -69.51400828,   -73.24859934,   -86.24148327, ...,\n        -9021.89941576, -8944.89420803, -8957.4530169 ]])"
      },
-     "execution_count": 406,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "b"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[2.52910697e-03, 2.37846467e-03, 2.44877380e-03, ...,\n        3.50106825e-03, 2.32560557e-03, 2.38880035e-03],\n       [1.58174739e-21, 4.69835681e-19, 3.46181183e-20, ...,\n        5.10919498e-44, 3.16177680e-18, 3.21898484e-19]])"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
    ],
    "metadata": {
     "collapsed": false,
