--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 252,
    "metadata": {
     "collapsed": true
    },
@@ -12,12 +12,13 @@
     "import numpy as np\n",
     "from itertools import islice\n",
     "from scipy.linalg import eig\n",
-    "from scipy.stats import norm"
+    "from scipy.stats import norm\n",
+    "from sklearn.preprocessing import normalize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 253,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -37,27 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 254,
    "outputs": [],
    "source": [
     "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int):\n",
     "    observation_count = observations.shape[0]\n",
     "    state_probability_matrix = np.zeros((state_count, observation_count))\n",
     "    path = np.ndarray((state_count, observation_count-1), dtype=int)\n",
-    "    cond_prob = np.ndarray((state_count, observation_count))\n",
-    "    # cond_prob = norm.pdf(observations[0], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
-    "    cond_prob[:,0] = norm.pdf(observations[0], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
-    "    state_probability_matrix[:,0] = np.log2(initial_state_probability) + np.log2(cond_prob[:,0])\n",
+    "    emission_matrix = norm(loc=gaussian_params[:,0].T, scale=gaussian_params[:,1].T).pdf(observations).T\n",
+    "    emission_matrix = normalize(emission_matrix[:,:], axis=0)\n",
+    "    state_probability_matrix[:,0] = np.log2(initial_state_probability) + np.log2(emission_matrix[:,0])\n",
     "    for i in range(1, observation_count):\n",
-    "        # cond_prob = norm.pdf(observations[i], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
-    "        cond_prob[:,i] = norm.pdf(observations[i], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
     "        for j in range(state_count):\n",
-    "            # prob = state_probability_matrix[:,i-1] + np.log2(transition_matrix[:,j]) + np.log2(cond_prob[j])\n",
-    "            prob = state_probability_matrix[:,i-1] + np.log2(state_transition_matrix[:,j]) + np.log2(cond_prob[j,i])\n",
+    "            prob = state_probability_matrix[:,i-1] + np.log2(state_transition_matrix[:,j]) + np.log2(emission_matrix[j,i])\n",
     "            path[j,i-1] = np.argmax(prob)\n",
     "            state_probability_matrix[j,i] = max(prob)\n",
     "\n",
-    "    return path, state_probability_matrix, cond_prob\n",
+    "    return path, state_probability_matrix, emission_matrix\n",
     "    # for i in range(1, observation_count):\n",
     "    # cond_prob = norm.pdf(observations[1], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
     "    # state_probability_matrix[0,1] = max(state_probability_matrix[:,0] + np.log2(transition_matrix[:,0]) + np.log2(cond_prob[0]))\n",
@@ -75,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 255,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
@@ -91,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 256,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
@@ -107,20 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 257,
    "outputs": [
     {
      "data": {
-      "text/plain": "(1000,)"
+      "text/plain": "(1000, 1)"
      },
-     "execution_count": 30,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# read data\n",
-    "observed_states = np.loadtxt('./Input/data.txt', dtype=float)\n",
+    "observed_states = np.loadtxt('./Input/data.txt', dtype=float).reshape(-1,1)\n",
     "observed_states.shape"
    ],
    "metadata": {
@@ -132,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 258,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[200, 100],\n       [ 10,  10]])"
      },
-     "execution_count": 31,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,13 +162,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 259,
    "outputs": [
     {
      "data": {
       "text/plain": "array([0.25, 0.75])"
      },
-     "execution_count": 32,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 260,
    "outputs": [],
    "source": [
     "a, b, c = estimate_sequence(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states)"
@@ -203,13 +200,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 261,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0]])"
      },
-     "execution_count": 34,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,13 +224,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 262,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[  -10.62715623,   -19.85748309,   -29.04578103, ...,\n        -8885.02327226, -8894.28602329, -8903.51009446],\n       [  -69.51400828,   -73.24859934,   -86.24148327, ...,\n        -9021.89941576, -8944.89420803, -8957.4530169 ]])"
+      "text/plain": "array([[  -2.        ,   -2.51457317,   -3.02914635, ..., -515.02945331,\n        -515.54402648, -516.05859966],\n       [ -60.88685205,  -55.90568943,  -60.22484859, ..., -651.90559682,\n        -566.15221123, -570.0015221 ]])"
      },
-     "execution_count": 35,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,13 +247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 263,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[2.52910697e-03, 2.37846467e-03, 2.44877380e-03, ...,\n        3.50106825e-03, 2.32560557e-03, 2.38880035e-03],\n       [1.58174739e-21, 4.69835681e-19, 3.46181183e-20, ...,\n        5.10919498e-44, 3.16177680e-18, 3.21898484e-19]])"
+      "text/plain": "array([[1.00000000e+00, 1.00000000e+00, 1.00000000e+00, ...,\n        1.00000000e+00, 1.00000000e+00, 1.00000000e+00],\n       [6.25417355e-19, 1.97537380e-16, 1.41369196e-17, ...,\n        1.45932459e-41, 1.35954989e-15, 1.34753197e-16]])"
      },
-     "execution_count": 36,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
