Viterbi working now hopefully

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 364,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 365,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -38,30 +38,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 366,
    "outputs": [],
    "source": [
-    "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int):\n",
+    "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int, state_converter:dict):\n",
     "    observation_count = observations.shape[0]\n",
     "    state_probability_matrix = np.zeros((state_count, observation_count))\n",
     "    path = np.ndarray((state_count, observation_count-1), dtype=int)\n",
-    "    emission_matrix = norm(loc=gaussian_params[:,0].T, scale=gaussian_params[:,1].T).pdf(observations).T\n",
-    "    emission_matrix = normalize(emission_matrix[:,:], axis=0)\n",
-    "    state_probability_matrix[:,0] = np.log2(initial_state_probability) + np.log2(emission_matrix[:,0])\n",
+    "    emission_matrix = norm(loc=gaussian_params[0,:], scale=gaussian_params[1,:]).pdf(observations).T\n",
+    "    emission_matrix = normalize(emission_matrix, axis=0)\n",
+    "    state_probability_matrix[:,0] = np.log(initial_state_probability) + np.log(emission_matrix[:,0])\n",
     "    for i in range(1, observation_count):\n",
     "        for j in range(state_count):\n",
-    "            prob = state_probability_matrix[:,i-1] + np.log2(state_transition_matrix[:,j]) + np.log2(emission_matrix[j,i])\n",
+    "            prob = state_probability_matrix[:,i-1] + np.log(state_transition_matrix[:,j]) + np.log(emission_matrix[j,i])\n",
     "            path[j,i-1] = np.argmax(prob)\n",
     "            state_probability_matrix[j,i] = max(prob)\n",
     "\n",
-    "    return path, state_probability_matrix, emission_matrix\n",
-    "    # for i in range(1, observation_count):\n",
-    "    # cond_prob = norm.pdf(observations[1], loc=gaussian_params[:,0], scale=gaussian_params[:,1])\n",
-    "    # state_probability_matrix[0,1] = max(state_probability_matrix[:,0] + np.log2(transition_matrix[:,0]) + np.log2(cond_prob[0]))\n",
-    "    # state_probability_matrix[1,1] = max(state_probability_matrix[:,0] + np.log2(transition_matrix[:,1]) + np.log2(cond_prob[1]))\n",
-    "    # print(state_probability_matrix[:,1])\n",
-    "    # state_probability_matrix[:,1] = max(state_probability_matrix[:,0] + np.log2(transition_matrix) + np.log2(cond_prob))\n",
-    "    # print(state_probability_matrix[:,1])"
+    "    out_path = ['' for i in range(observation_count)]\n",
+    "    sink_index = np.argmax(state_probability_matrix[:,-1])\n",
+    "    out_path[observation_count-1] = state_converter[sink_index]\n",
+    "    for i in range(observation_count-2,-1,-1):\n",
+    "        sink_index = path[sink_index, i]\n",
+    "        out_path[i] = state_converter[sink_index]\n",
+    "\n",
+    "    return path, state_probability_matrix, emission_matrix, out_path"
    ],
    "metadata": {
     "collapsed": false,
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 367,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 368,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
@@ -104,13 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 369,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000, 1)"
      },
-     "execution_count": 257,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,17 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[200, 100],\n       [ 10,  10]])"
-     },
-     "execution_count": 258,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 370,
+   "outputs": [],
    "source": [
     "# read parameters\n",
     "with open('./Input/parameters.txt.txt', 'r') as f:\n",
@@ -149,9 +140,7 @@
     "    transition_matrix = np.genfromtxt(islice(lines, 1, 1+no_of_states))\n",
     "\n",
     "with open('./Input/parameters.txt.txt', 'r') as lines:\n",
-    "    gaussian_parameters = np.genfromtxt(islice(lines, 1+no_of_states, 1+2*no_of_states), dtype=int)\n",
-    "\n",
-    "gaussian_parameters"
+    "    gaussian_parameters = np.genfromtxt(islice(lines, 1+no_of_states, 1+2*no_of_states), dtype=int)"
    ],
    "metadata": {
     "collapsed": false,
@@ -162,34 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([0.25, 0.75])"
-     },
-     "execution_count": 259,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "initial_distribution = get_stationary_distibution(transition_matrix)\n",
-    "initial_distribution"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 371,
    "outputs": [],
    "source": [
-    "a, b, c = estimate_sequence(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states)"
+    "initial_distribution = get_stationary_distibution(transition_matrix)\n",
+    "index_state_map = {\n",
+    "    0: '\\\"El Nino\\\"',\n",
+    "    1: '\\\"La Nina\\\"'\n",
+    "}"
    ],
    "metadata": {
     "collapsed": false,
@@ -200,13 +169,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 372,
+   "outputs": [],
+   "source": [
+    "a, b, c, hidden_path = estimate_sequence(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0]])"
+      "text/plain": "array([[1, 1, 1, ..., 0, 0, 1],\n       [1, 1, 1, ..., 1, 1, 1]])"
      },
-     "execution_count": 261,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,13 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 374,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[  -2.        ,   -2.51457317,   -3.02914635, ..., -515.02945331,\n        -515.54402648, -516.05859966],\n       [ -60.88685205,  -55.90568943,  -60.22484859, ..., -651.90559682,\n        -566.15221123, -570.0015221 ]])"
+      "text/plain": "array([[-4.68619767e+01, -5.42948762e+01, -5.14943271e+01, ...,\n        -5.36454548e+02, -5.90702136e+02, -5.89241290e+02],\n       [-2.87682072e-01, -3.93042588e-01, -4.98403104e-01, ...,\n        -5.35555976e+02, -5.35661337e+02, -5.35766697e+02]])"
      },
-     "execution_count": 262,
+     "execution_count": 374,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,19 +230,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 375,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[1.00000000e+00, 1.00000000e+00, 1.00000000e+00, ...,\n        1.00000000e+00, 1.00000000e+00, 1.00000000e+00],\n       [6.25417355e-19, 1.97537380e-16, 1.41369196e-17, ...,\n        1.45932459e-41, 1.35954989e-15, 1.34753197e-16]])"
+      "text/plain": "array([[1.77894327e-20, 3.50730551e-23, 6.41200887e-22, ...,\n        3.14837047e-01, 3.93979520e-24, 5.37677679e-23],\n       [1.00000000e+00, 1.00000000e+00, 1.00000000e+00, ...,\n        9.49145739e-01, 1.00000000e+00, 1.00000000e+00]])"
      },
-     "execution_count": 263,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "c"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "857\n"
+     ]
+    }
+   ],
+   "source": [
+    "viterbi_output = []\n",
+    "with open('./Output/states_Viterbi_wo_learning.txt', 'r') as f:\n",
+    "    for line in f.readlines():\n",
+    "        viterbi_output.append(line.rstrip('\\n'))\n",
+    "\n",
+    "match = 0\n",
+    "\n",
+    "for item1, item2 in zip(viterbi_output, hidden_path):\n",
+    "    if item1 == item2:\n",
+    "        match += 1\n",
+    "\n",
+    "print(match)"
    ],
    "metadata": {
     "collapsed": false,
